fixed keyboard keys on small screen

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -109,7 +109,7 @@
 
 .keyboard-key {
     height: 10vw;
-    min-width: 5vw;
+    min-width: 7vw;
     max-width: 50px;
     max-height: 60px;
     font-weight: bold;
